# InstantOS

./: .gitmodules  Makefile  ix.md  limine.conf  linker.ld  meson.build  meson_options.txt  readme.md
ilibcxx/: meson.build
ilibcxx/include/: cstdio.hpp  cstdlib.hpp  iostream.hpp  string.hpp  unistd.hpp
ilibcxx/include/instant/: gdi.hpp  instant.hpp  proc.hpp  syscall.hpp
ilibcxx/src/asm/: crt0.asm
ilibcxx/src/cxx/: cstdio.cpp  cstdlib.cpp  cxxabi.cpp  exception.cpp  exit.cpp  new.cpp  string.cpp  unistd.cpp
scripts/: make_iso.sh
src/: Makefile  instant.hpp  main.cpp  meson.build
src/cpu/: pic.hpp  sse.asm
src/cpu/acpi/: acpi.cpp  acpi.hpp  kacpi.cpp  pci.cpp  pci.hpp
src/cpu/apic/: apic.cpp  apic.hpp  ioapic.hpp  irqs.hpp  lapic.hpp
src/cpu/cereal/: cereal.cpp  cereal.hpp
src/cpu/gdt/: gdt.cpp  gdt.hpp
src/cpu/idt/: idt.cpp  interrupt.hpp  isr.asm  isr.cpp  isr.hpp
src/cpu/mm/: bitmap.cpp  bitmap.hpp  memmgr.cpp  memmgr.hpp  pmm.cpp  pmm.hpp
src/cpu/process/: exec.cpp  exec.hpp  process.cpp  process.hpp  scheduler.cpp  scheduler.hpp  switch.asm  usermode.asm
src/cpu/syscall/: entry.asm  syscall.cpp  syscall.hpp
src/cstd/include/: stdint.h
src/fs/ramfs/: ramfs.cpp
src/fs/vfs/: vfs.cpp  vfs.hpp
src/graphics/: bsod.hpp  bsode.cpp  buffer.cpp  buffer.hpp  color.hpp  console.cpp  console.hpp  framebuffer.cpp  framebuffer.hpp
src/idt/: idt.cpp  idt.hpp  isr.asm  isr.hpp
src/interrupts/: keyboard.hpp  timer.hpp
src/x86_64/: boot.asm  limine.cpp  ports.cpp  ports.hpp  requests.cpp  requests.hpp
tools/: meson.build  mkinitrd.cpp
userland/: autopong.cpp  meson.build
